add support for BrowserWatcher