@@ -14,11 +14,11 @@ repositories {
 dependencies {
     testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
     testCompileOnly("org.projectlombok:lombok:1.18.38")
-    testImplementation("org.junit.jupiter:junit-jupiter:5.13.0-M3")
-    testImplementation("org.junit.platform:junit-platform-launcher:1.13.0-M3")
+    testImplementation("org.junit.jupiter:junit-jupiter:5.13.1")
+    testImplementation("org.junit.platform:junit-platform-launcher:1.13.1")
     testImplementation("org.junit-pioneer:junit-pioneer:2.3.0")
     testImplementation("io.github.glytching:junit-extensions:2.6.0")
-    testImplementation("org.seleniumhq.selenium:selenium-java:4.32.0")
+    testImplementation("org.seleniumhq.selenium:selenium-java:4.33.0")
     testImplementation("io.github.bonigarcia:selenium-jupiter:6.1.1")
     testImplementation("ch.qos.logback:logback-core:1.5.18")
     testImplementation("ch.qos.logback:logback-classic:1.5.18")
@@ -30,9 +30,11 @@ dependencies {
     testImplementation("org.hamcrest:hamcrest:3.0")
     testImplementation("org.jsoup:jsoup:1.20.1")
     testImplementation("com.aventstack:extentreports:5.1.2")
-    testImplementation("org.testcontainers:selenium:1.21.0")
+    testImplementation("org.testcontainers:selenium:1.21.1")
     testImplementation("com.github.romankh3:image-comparison:4.4.0")
     testImplementation("com.deque.html.axe-core:selenium:4.10.1")
+    testImplementation("commons-io:commons-io:2.19.0")
+    testImplementation("org.awaitility:awaitility:4.3.0")
 }
 
 test {
@@ -41,12 +43,16 @@ test {
 
     //set env variables
     environment "WDM_DOCKERENABLERECORDING", "false"
-    environment "WDM_CHROMEVERSION", "136.0"
+    environment "WDM_CHROMEVERSION", "137"
 
-    environment "ENABLE_BROWSER_IN_DOCKER_CONTAINER", "false"
+    environment "BROWSER_IN_DOCKER_ENABLED", "false"
+    environment "BROWSER_IN_HEADLESS_ENABLED", "false"
+
+    //recording works in headless in container
+    //when in use switch off recording via container
+    environment "BROWSER_WATCHER_ENABLED", "true"
 
     environment "ACCESSIBILITY_ASSERTIONS_ENABLED", "true"
-    environment "ENABLE_BROWSER_IN_HEADLESS_MODE", "false"
 
     //requires to run tests in container
     environment "VISUAL_ASSERTIONS_ENABLED", "false "
@@ -58,6 +64,7 @@ test {
         def weaver = configurations.testRuntimeClasspath.find { it.name.contains("aspectjweaver") }
         jvmArgs += "-javaagent:$weaver"
         jvmArgs += "--add-opens=java.base/java.util=ALL-UNNAMED"
+        jvmArgs += "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED"
         jvmArgs += "--add-opens=java.base/java.lang=ALL-UNNAMED"
         jvmArgs += "--add-opens=java.base/java.time=ALL-UNNAMED"
         jvmArgs += "--add-opens=java.base/java.time.format=ALL-UNNAMED"
